simpleLangParser.py
# Generated from simpleLang.g4 by ANTLR 4.9
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class simpleLangParser ( Parser ):

    grammarFileName = "simpleLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'start_program'", u"'end_program'", 
                     u"'@'", u"'bool_true'", u"'bool_false'", u"'add_val'", 
                     u"'subtract_val'", u"'mult_val'", u"'divide_val'", 
                     u"'equal_to'", u"'gt_than'", u"'or_condition'", u"'and_condition'", 
                     u"'print_val'", u"'declare_intvar'", u"'initialize_var'", 
                     u"'assign_var'", u"'set_var_val'", u"'end_assignment'", 
                     u"'if_condition'", u"'else_condition'", u"'end_if_condition'", 
                     u"'while_condition'", u"'end_while_condition'" ]

    symbolicNames = [ u"<INVALID>", u"BEGINMAIN", u"ENDMAIN", u"AT", u"TRUE", 
                      u"FALSE", u"PLUSOPERATOR", u"MINUSOPERATOR", u"MULTIPLICATIONOPERATOR", 
                      u"DIVISIONOPERATOR", u"EQUALTO", u"GREATERTHAN", u"OR", 
                      u"AND", u"PRINT", u"DECLAREINT", u"SETINITIALVALUE", 
                      u"ASSIGNVARIABLE", u"SETVALUE", u"ENDASSIGNVARIABLE", 
                      u"IF", u"ELSE", u"ENDIF", u"WHILE", u"ENDWHILE", u"IDENTIFIER", 
                      u"NUMBER", u"STRING_LITERAL", u"WS" ]

    RULE_program = 0
    RULE_main_function = 1
    RULE_statements = 2
    RULE_statement = 3
    RULE_print_stmt = 4
    RULE_print_sconst_stmt = 5
    RULE_print_var_stmt = 6
    RULE_var_decl_stmt = 7
    RULE_condition_stmt = 8
    RULE_while_stmt = 9
    RULE_expression = 10
    RULE_var_assign_stmt = 11
    RULE_operations = 12
    RULE_operation = 13

    ruleNames =  [ u"program", u"main_function", u"statements", u"statement", 
                   u"print_stmt", u"print_sconst_stmt", u"print_var_stmt", 
                   u"var_decl_stmt", u"condition_stmt", u"while_stmt", u"expression", 
                   u"var_assign_stmt", u"operations", u"operation" ]

    EOF = Token.EOF
    BEGINMAIN=1
    ENDMAIN=2
    AT=3
    TRUE=4
    FALSE=5
    PLUSOPERATOR=6
    MINUSOPERATOR=7
    MULTIPLICATIONOPERATOR=8
    DIVISIONOPERATOR=9
    EQUALTO=10
    GREATERTHAN=11
    OR=12
    AND=13
    PRINT=14
    DECLAREINT=15
    SETINITIALVALUE=16
    ASSIGNVARIABLE=17
    SETVALUE=18
    ENDASSIGNVARIABLE=19
    IF=20
    ELSE=21
    ENDIF=22
    WHILE=23
    ENDWHILE=24
    IDENTIFIER=25
    NUMBER=26
    STRING_LITERAL=27
    WS=28

    def __init__(self, input, output=sys.stdout):
        super(simpleLangParser, self).__init__(input, output=output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def main_function(self):
            return self.getTypedRuleContext(simpleLangParser.Main_functionContext,0)


        def getRuleIndex(self):
            return simpleLangParser.RULE_program

        def accept(self, visitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = simpleLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.main_function()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_functionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.Main_functionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def BEGINMAIN(self):
            return self.getToken(simpleLangParser.BEGINMAIN, 0)

        def statements(self):
            return self.getTypedRuleContext(simpleLangParser.StatementsContext,0)


        def ENDMAIN(self):
            return self.getToken(simpleLangParser.ENDMAIN, 0)

        def getRuleIndex(self):
            return simpleLangParser.RULE_main_function

        def accept(self, visitor):
            if hasattr(visitor, "visitMain_function"):
                return visitor.visitMain_function(self)
            else:
                return visitor.visitChildren(self)




    def main_function(self):

        localctx = simpleLangParser.Main_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main_function)
        try:
            self.state = 36
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.match(simpleLangParser.BEGINMAIN)
                self.state = 31
                self.statements()
                self.state = 32
                self.match(simpleLangParser.ENDMAIN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.match(simpleLangParser.BEGINMAIN)
                self.state = 35
                self.match(simpleLangParser.ENDMAIN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.StatementsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(simpleLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(simpleLangParser.StatementContext,i)


        def getRuleIndex(self):
            return simpleLangParser.RULE_statements

        def accept(self, visitor):
            if hasattr(visitor, "visitStatements"):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = simpleLangParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << simpleLangParser.PRINT) | (1 << simpleLangParser.DECLAREINT) | (1 << simpleLangParser.ASSIGNVARIABLE) | (1 << simpleLangParser.IF) | (1 << simpleLangParser.WHILE))) != 0):
                self.state = 38
                self.statement()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.StatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def var_decl_stmt(self):
            return self.getTypedRuleContext(simpleLangParser.Var_decl_stmtContext,0)


        def var_assign_stmt(self):
            return self.getTypedRuleContext(simpleLangParser.Var_assign_stmtContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(simpleLangParser.Print_stmtContext,0)


        def condition_stmt(self):
            return self.getTypedRuleContext(simpleLangParser.Condition_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(simpleLangParser.While_stmtContext,0)


        def getRuleIndex(self):
            return simpleLangParser.RULE_statement

        def accept(self, visitor):
            if hasattr(visitor, "visitStatement"):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = simpleLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [simpleLangParser.DECLAREINT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.var_decl_stmt()
                pass
            elif token in [simpleLangParser.ASSIGNVARIABLE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.var_assign_stmt()
                pass
            elif token in [simpleLangParser.PRINT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.print_stmt()
                pass
            elif token in [simpleLangParser.IF]:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.condition_stmt()
                pass
            elif token in [simpleLangParser.WHILE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.while_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.Print_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def print_var_stmt(self):
            return self.getTypedRuleContext(simpleLangParser.Print_var_stmtContext,0)


        def print_sconst_stmt(self):
            return self.getTypedRuleContext(simpleLangParser.Print_sconst_stmtContext,0)


        def getRuleIndex(self):
            return simpleLangParser.RULE_print_stmt

        def accept(self, visitor):
            if hasattr(visitor, "visitPrint_stmt"):
                return visitor.visitPrint_stmt(self)
            else:
                return visitor.visitChildren(self)




    def print_stmt(self):

        localctx = simpleLangParser.Print_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_print_stmt)
        try:
            self.state = 53
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.print_var_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.print_sconst_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_sconst_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.Print_sconst_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(simpleLangParser.PRINT, 0)

        def STRING_LITERAL(self):
            return self.getToken(simpleLangParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return simpleLangParser.RULE_print_sconst_stmt

        def accept(self, visitor):
            if hasattr(visitor, "visitPrint_sconst_stmt"):
                return visitor.visitPrint_sconst_stmt(self)
            else:
                return visitor.visitChildren(self)




    def print_sconst_stmt(self):

        localctx = simpleLangParser.Print_sconst_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_print_sconst_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(simpleLangParser.PRINT)
            self.state = 56
            self.match(simpleLangParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_var_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.Print_var_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(simpleLangParser.PRINT, 0)

        def IDENTIFIER(self):
            return self.getToken(simpleLangParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return simpleLangParser.RULE_print_var_stmt

        def accept(self, visitor):
            if hasattr(visitor, "visitPrint_var_stmt"):
                return visitor.visitPrint_var_stmt(self)
            else:
                return visitor.visitChildren(self)




    def print_var_stmt(self):

        localctx = simpleLangParser.Print_var_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_print_var_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(simpleLangParser.PRINT)
            self.state = 59
            self.match(simpleLangParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.Var_decl_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DECLAREINT(self):
            return self.getToken(simpleLangParser.DECLAREINT, 0)

        def IDENTIFIER(self):
            return self.getToken(simpleLangParser.IDENTIFIER, 0)

        def SETINITIALVALUE(self):
            return self.getToken(simpleLangParser.SETINITIALVALUE, 0)

        def expression(self):
            return self.getTypedRuleContext(simpleLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return simpleLangParser.RULE_var_decl_stmt

        def accept(self, visitor):
            if hasattr(visitor, "visitVar_decl_stmt"):
                return visitor.visitVar_decl_stmt(self)
            else:
                return visitor.visitChildren(self)




    def var_decl_stmt(self):

        localctx = simpleLangParser.Var_decl_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_decl_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(simpleLangParser.DECLAREINT)
            self.state = 62
            self.match(simpleLangParser.IDENTIFIER)
            self.state = 63
            self.match(simpleLangParser.SETINITIALVALUE)
            self.state = 64
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.Condition_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simpleLangParser.RULE_condition_stmt

     
        def copyFrom(self, ctx):
            super(simpleLangParser.Condition_stmtContext, self).copyFrom(ctx)



    class IfelseendifContext(Condition_stmtContext):

        def __init__(self, parser, ctx): # actually a simpleLangParser.Condition_stmtContext)
            super(simpleLangParser.IfelseendifContext, self).__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(simpleLangParser.IF, 0)
        def expression(self):
            return self.getTypedRuleContext(simpleLangParser.ExpressionContext,0)

        def statements(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(simpleLangParser.StatementsContext)
            else:
                return self.getTypedRuleContext(simpleLangParser.StatementsContext,i)

        def ELSE(self):
            return self.getToken(simpleLangParser.ELSE, 0)
        def ENDIF(self):
            return self.getToken(simpleLangParser.ENDIF, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitIfelseendif"):
                return visitor.visitIfelseendif(self)
            else:
                return visitor.visitChildren(self)


    class IfendidContext(Condition_stmtContext):

        def __init__(self, parser, ctx): # actually a simpleLangParser.Condition_stmtContext)
            super(simpleLangParser.IfendidContext, self).__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(simpleLangParser.IF, 0)
        def expression(self):
            return self.getTypedRuleContext(simpleLangParser.ExpressionContext,0)

        def statements(self):
            return self.getTypedRuleContext(simpleLangParser.StatementsContext,0)

        def ENDIF(self):
            return self.getToken(simpleLangParser.ENDIF, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitIfendid"):
                return visitor.visitIfendid(self)
            else:
                return visitor.visitChildren(self)



    def condition_stmt(self):

        localctx = simpleLangParser.Condition_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition_stmt)
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = simpleLangParser.IfelseendifContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(simpleLangParser.IF)
                self.state = 67
                self.expression()
                self.state = 68
                self.statements()
                self.state = 69
                self.match(simpleLangParser.ELSE)
                self.state = 70
                self.statements()
                self.state = 71
                self.match(simpleLangParser.ENDIF)
                pass

            elif la_ == 2:
                localctx = simpleLangParser.IfendidContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(simpleLangParser.IF)
                self.state = 74
                self.expression()
                self.state = 75
                self.statements()
                self.state = 76
                self.match(simpleLangParser.ENDIF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.While_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(simpleLangParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(simpleLangParser.ExpressionContext,0)


        def statements(self):
            return self.getTypedRuleContext(simpleLangParser.StatementsContext,0)


        def ENDWHILE(self):
            return self.getToken(simpleLangParser.ENDWHILE, 0)

        def getRuleIndex(self):
            return simpleLangParser.RULE_while_stmt

        def accept(self, visitor):
            if hasattr(visitor, "visitWhile_stmt"):
                return visitor.visitWhile_stmt(self)
            else:
                return visitor.visitChildren(self)




    def while_stmt(self):

        localctx = simpleLangParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(simpleLangParser.WHILE)
            self.state = 81
            self.expression()
            self.state = 82
            self.statements()
            self.state = 83
            self.match(simpleLangParser.ENDWHILE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simpleLangParser.RULE_expression

     
        def copyFrom(self, ctx):
            super(simpleLangParser.ExpressionContext, self).copyFrom(ctx)



    class VarexprContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a simpleLangParser.ExpressionContext)
            super(simpleLangParser.VarexprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(simpleLangParser.IDENTIFIER, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitVarexpr"):
                return visitor.visitVarexpr(self)
            else:
                return visitor.visitChildren(self)


    class TrueexprContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a simpleLangParser.ExpressionContext)
            super(simpleLangParser.TrueexprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def AT(self):
            return self.getToken(simpleLangParser.AT, 0)
        def TRUE(self):
            return self.getToken(simpleLangParser.TRUE, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitTrueexpr"):
                return visitor.visitTrueexpr(self)
            else:
                return visitor.visitChildren(self)


    class NumberexprContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a simpleLangParser.ExpressionContext)
            super(simpleLangParser.NumberexprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(simpleLangParser.NUMBER, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitNumberexpr"):
                return visitor.visitNumberexpr(self)
            else:
                return visitor.visitChildren(self)


    class FalseexprContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a simpleLangParser.ExpressionContext)
            super(simpleLangParser.FalseexprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def AT(self):
            return self.getToken(simpleLangParser.AT, 0)
        def FALSE(self):
            return self.getToken(simpleLangParser.FALSE, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitFalseexpr"):
                return visitor.visitFalseexpr(self)
            else:
                return visitor.visitChildren(self)



    def expression(self):

        localctx = simpleLangParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = simpleLangParser.VarexprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(simpleLangParser.IDENTIFIER)
                pass

            elif la_ == 2:
                localctx = simpleLangParser.NumberexprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.match(simpleLangParser.NUMBER)
                pass

            elif la_ == 3:
                localctx = simpleLangParser.TrueexprContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.match(simpleLangParser.AT)
                self.state = 88
                self.match(simpleLangParser.TRUE)
                pass

            elif la_ == 4:
                localctx = simpleLangParser.FalseexprContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.match(simpleLangParser.AT)
                self.state = 90
                self.match(simpleLangParser.FALSE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_assign_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.Var_assign_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ASSIGNVARIABLE(self):
            return self.getToken(simpleLangParser.ASSIGNVARIABLE, 0)

        def IDENTIFIER(self):
            return self.getToken(simpleLangParser.IDENTIFIER, 0)

        def SETVALUE(self):
            return self.getToken(simpleLangParser.SETVALUE, 0)

        def expression(self):
            return self.getTypedRuleContext(simpleLangParser.ExpressionContext,0)


        def operations(self):
            return self.getTypedRuleContext(simpleLangParser.OperationsContext,0)


        def ENDASSIGNVARIABLE(self):
            return self.getToken(simpleLangParser.ENDASSIGNVARIABLE, 0)

        def getRuleIndex(self):
            return simpleLangParser.RULE_var_assign_stmt

        def accept(self, visitor):
            if hasattr(visitor, "visitVar_assign_stmt"):
                return visitor.visitVar_assign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def var_assign_stmt(self):

        localctx = simpleLangParser.Var_assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(simpleLangParser.ASSIGNVARIABLE)
            self.state = 94
            self.match(simpleLangParser.IDENTIFIER)
            self.state = 95
            self.match(simpleLangParser.SETVALUE)
            self.state = 96
            self.expression()
            self.state = 97
            self.operations(0)
            self.state = 98
            self.match(simpleLangParser.ENDASSIGNVARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.OperationsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def operation(self):
            return self.getTypedRuleContext(simpleLangParser.OperationContext,0)


        def operations(self):
            return self.getTypedRuleContext(simpleLangParser.OperationsContext,0)


        def getRuleIndex(self):
            return simpleLangParser.RULE_operations

        def accept(self, visitor):
            if hasattr(visitor, "visitOperations"):
                return visitor.visitOperations(self)
            else:
                return visitor.visitChildren(self)



    def operations(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = simpleLangParser.OperationsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_operations, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.operation()
            self._ctx.stop = self._input.LT(-1)
            self.state = 107
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = simpleLangParser.OperationsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_operations)
                    self.state = 103
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 104
                    self.operation() 
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class OperationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(simpleLangParser.OperationContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return simpleLangParser.RULE_operation

     
        def copyFrom(self, ctx):
            super(simpleLangParser.OperationContext, self).copyFrom(ctx)



    class OropContext(OperationContext):

        def __init__(self, parser, ctx): # actually a simpleLangParser.OperationContext)
            super(simpleLangParser.OropContext, self).__init__(parser)
            self.copyFrom(ctx)

        def OR(self):
            return self.getToken(simpleLangParser.OR, 0)
        def expression(self):
            return self.getTypedRuleContext(simpleLangParser.ExpressionContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitOrop"):
                return visitor.visitOrop(self)
            else:
                return visitor.visitChildren(self)


    class EqualopContext(OperationContext):

        def __init__(self, parser, ctx): # actually a simpleLangParser.OperationContext)
            super(simpleLangParser.EqualopContext, self).__init__(parser)
            self.copyFrom(ctx)

        def EQUALTO(self):
            return self.getToken(simpleLangParser.EQUALTO, 0)
        def expression(self):
            return self.getTypedRuleContext(simpleLangParser.ExpressionContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitEqualop"):
                return visitor.visitEqualop(self)
            else:
                return visitor.visitChildren(self)


    class AndopContext(OperationContext):

        def __init__(self, parser, ctx): # actually a simpleLangParser.OperationContext)
            super(simpleLangParser.AndopContext, self).__init__(parser)
            self.copyFrom(ctx)

        def AND(self):
            return self.getToken(simpleLangParser.AND, 0)
        def expression(self):
            return self.getTypedRuleContext(simpleLangParser.ExpressionContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAndop"):
                return visitor.visitAndop(self)
            else:
                return visitor.visitChildren(self)


    class GreateropContext(OperationContext):

        def __init__(self, parser, ctx): # actually a simpleLangParser.OperationContext)
            super(simpleLangParser.GreateropContext, self).__init__(parser)
            self.copyFrom(ctx)

        def GREATERTHAN(self):
            return self.getToken(simpleLangParser.GREATERTHAN, 0)
        def expression(self):
            return self.getTypedRuleContext(simpleLangParser.ExpressionContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitGreaterop"):
                return visitor.visitGreaterop(self)
            else:
                return visitor.visitChildren(self)

